--- a/index.html
+++ b/index.html
@@ -72,4 +72,78 @@
                 body: JSON.stringify({ year, grade, moduleName, percentage })
             });
             if (!response.ok) {
- 
+                console.error('Error saving grade');
+            }
+        }
+
+        async function calculateQCA() {
+            let totalPoints = 0;
+            let totalWeight = 0;
+            const yearWeights = { 1: 0, 2: 1, 3: 1, 4: 2 };
+            gradesData = { labels: [], datasets: [] };
+
+            for (let i = 1; i < semesterCounter; i++) {
+                const yearInput = document.getElementById(`year-${i}`).value;
+                const semesterId = `modules-${i}`;
+                const modules = document.getElementById(semesterId).children;
+
+                for (let j = 0; j < modules.length; j++) {
+                    const moduleName = document.getElementById(`module-name-${i}-${j + 1}`).value;
+                    const gradeInput = document.getElementById(`grade-${i}-${j + 1}`).value.trim().toUpperCase();
+                    const percentageInput = parseInt(document.getElementById(`percentage-${i}-${j + 1}`).value);
+
+                    if (yearInput && grades[gradeInput] !== undefined && percentageInput >= 0 && percentageInput <= 100) {
+                        const year = parseInt(yearInput);
+                        const gradeValue = grades[gradeInput];
+                        totalPoints += (gradeValue * yearWeights[year] * percentageInput) / 100;
+                        totalWeight += (yearWeights[year] * percentageInput) / 100;
+
+                        if (!gradesData.labels.includes(moduleName)) {
+                            gradesData.labels.push(moduleName);
+                            gradesData.datasets.push({ label: moduleName, data: [], backgroundColor: [] });
+                        }
+
+                        gradesData.datasets[gradesData.labels.indexOf(moduleName)].data.push(gradeValue);
+                        gradesData.datasets[gradesData.labels.indexOf(moduleName)].backgroundColor.push(gradeColors[gradeInput]);
+
+                        // Save grade to Notion
+                        await saveGradeToNotion(year, gradeInput, moduleName, percentageInput);
+                    }
+                }
+            }
+
+            const qca = totalPoints / totalWeight;
+            let honors = "Fail";
+            if (qca >= 2.0) honors = "Third class honours";
+            if (qca >= 2.6) honors = "Second class, grade 2 (2.2)";
+            if (qca >= 3.0) honors = "Second class, grade 1 (2.1)";
+            if (qca >= 3.4) honors = "First class honours";
+
+            document.getElementById('result').innerText = `Overall QCA is ${qca.toFixed(2)}, ${honors}`;
+            updateChart();
+        }
+
+        function updateChart() {
+            const ctx = document.getElementById('grade-chart').getContext('2d');
+            if (gradesData.labels.length === 0) {
+                document.getElementById('chart-container').style.display = 'none';
+                return;
+            }
+            document.getElementById('chart-container').style.display = 'block';
+
+            new Chart(ctx, {
+                type: 'bar',
+                data: gradesData,
+                options: {
+                    scales: {
+                        y: {
+                            beginAtZero: true,
+                            ticks: { stepSize: 1 }
+                        }
+                    }
+                }
+            });
+        }
+    </script>
+</body>
+</html>
