--- a/index.html
+++ b/index.html
@@ -32,5 +32,8 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <!-- Include custom JavaScript -->
     <script src="script.js"></script>
+    <!-- Include Chart.js library -->
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
 </body>
 </html>
