--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QCA Calculator</title>
     <!-- Include Google Fonts for a Studio Ghibli aesthetic -->
-
+    <link href="https://fonts.googleapis.com/css2?family=Sawarabi+Mincho&display=swap" rel="stylesheet">
+    <!-- Link to external stylesheet -->
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -31,8 +32,5 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <!-- Include custom JavaScript -->
     <script src="script.js"></script>
-    <!-- Include Chart.js library -->
-<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-
 </body>
 </html>
